= ActiveMerchant CHANGELOG

* Fix bug with adding name to Payflow requests [cody]
* Gateways will now look for CreditCard#brand before looking for CreditCard#type [cody]
* Make before_validate in CreditCard more clear [keith_du...@mac.com, cody]
* Don't send full Australian state names to PayPal [cody]
* Return last_digits that are less than 4 characters long [cody]
* Fix Bug with Authorize.Net ARB Remote Test [patrick.t.joyce]
* Add support for forcing test mode on Secure Pay AU gateway [cody]
* Update Secure Pay Au to meet specs for MessageInfo elements [cody]
* Add support for the Australian Secure Pay payment gateway [cody]
* Allow LinkPoint cancellations for recurring billing. [yanagimoto.shin]
* Add support for Åland Islands to the country list [cody]

== Version 1.3.1 (January 28, 2008)

* Rename BrainTreeGateway to BraintreeGateway, but keep alias to old naming for backwards compatibility [cody]

== Version 1.3.0 (January 28, 2008)

* Remove attr_readers for url and response from Gateway [cody]
* Remove @url from EfsnetGateway [cody]
* Remove @response instance variable in QuickpayGateway. [cody]
* Remove @response instance variable in PsigateGateway. Don't use billing address for shipping [cody]
* Remove @response instance variable in PaypalGateway. Don't use billing address for shipping. [cody]
* Remove @response instance variable in PayflowGateway [cody]
* Remove @response instance variable in MonerisGateway [cody]
* Remove @response instance variable and don't use billing address for shipping address in LinkpointGateway [cody]
* Remove @response instance variable from ExactGateway [cody]
* Remove @response instance variable from EwayGateway [cody]
* Remove @response instance variable from EfsnetGateway [cody]
* Remove @response instance variable from DataCashGateway [cody]
* Don't use billing_address for shipping_address in CyberSourceGateway [cody]
* Remove @response instance variable from CardStreamGateway [cody]