@@ -1,5 +1,6 @@
 = ActiveMerchant CHANGELOG
 
+* Actually fix the bug by adding extdata element to Payflow Requests [cody]
 * Fix bug with adding name to Payflow requests [cody]
 * Gateways will now look for CreditCard#brand before looking for CreditCard#type [cody]
 * Make before_validate in CreditCard more clear [keith_du...@mac.com, cody]
